--- a/app/src/main/res/layout/activity_confirmation.xml
+++ b/app/src/main/res/layout/activity_confirmation.xml
@@ -22,9 +22,9 @@
 
     <!-- Confirmation Nama Makanan -->
     <TextView
+        android:id="@+id/tvName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Food Name: Batagor"
         android:textSize="18sp"
         android:layout_marginBottom="8dp"/>
 
